--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -2,10 +2,29 @@ body {
     padding-top: 5rem;
 }
 
+.imagesContainer {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 10px;
+    list-style: none;
+    padding: 0;
+}
+
+
+.imagesContainer img {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    margin: 20px;
+
+}
+
 .form-login {
     max-width: 330px;
     padding: 15px;
 }
+
 
 .form-login input[type="text"] {
     margin-bottom: -1px;
