--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -9,16 +9,16 @@
         <li class="nav-item">
           <a class="nav-link active" href="{{ url_for('home') }}">Home <span class="visually-hidden">(current)</span></a>
         </li>
+        {% if current_user.is_authenticated %}
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('logout_user') }}">Logout</a></li>
+        {% else %}
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
+        {% endif %}
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('about') }}">About</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('upload') }}">File Upload</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+          <a class="nav-link" href="{{ url_for('files') }}">View Images</a>
         </li>
       </ul>
     </div>
